# miccort

./: .dockerignore  .gitignore  Dockerfile  README.md  go.mod  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: cloudflare-signaling.yml  desktop-release.yml  docker-backend.yml
cloudflare-signaling/: README.md  package-lock.json  package.json  wrangler.toml
cloudflare-signaling/src/: index.ts
cmd/server/: main.go
internal/hub/: hub.go  hub_test.go
internal/room/: room.go
internal/ws/: handler.go
src/: App.vue  main.ts  styles.css  updater.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: VoiceRoom.vue
