[package]
name = "mikcort"
version = "0.1.9"
description = "Lightweight desktop voice chat"
authors = ["mikcort"]
edition = "2021"

[lib]
name = "mikcort_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
